crates/conf/macros/tests/fails/bad_struct_unnamed_feilds.rs
use conf_macros::Config;

#[derive(Config)]
struct TestConfig (
    f32,i32
);

fn main() {}
